views/css/style.css
@font-face {
    font-family: Inter;
    src:local('/views/assets/Inter-VariableFont_opsz,wght.ttf');
}

:root {
    --opacity-transition: opacity 0.5s ease-in-out;

    --sun-filter-light: brightness(0) saturate(100%) invert(88%) sepia(87%) saturate(6409%) hue-rotate(127deg) brightness(100%) contrast(98%) blur(10px);
    --sun-filter-dark: invert(12%) sepia(100%) saturate(7451%) hue-rotate(270deg) brightness(86%) contrast(119%) blur(10px);

    --sun-background-dark: #2d0067;
    --sun-background-light: #009dab;

    --background-color-dark: rgb(5, 10, 5);
    --background-color-light: rgb(250, 245, 250);

    --main-color-dark: rgb(76, 0, 168);
    --main-color-light: rgb(38, 206, 252);

    --border-color-dark: rgba(255,255,255,0.4);
    --border-color-light: rgba(0, 0, 0, 1);

    --svg-filter-dark: invert(100%) opacity(0.5);
    --svg-filter-light: opacity(1);

    --sun-background-color: var(--sun-background-dark);
    --background-color: var(--background-color-dark);
    --main-color: var(--main-color-dark);
    --text-color: var(--background-color-light);
    --border-color: var(--border-color-dark);
    --svg-filter: var(--svg-filter-dark);
}

.light-theme {
    --background-color: var(--background-color-light);
    --main-color: var(--main-color-light);
    --text-color: var(--background-color-dark);
    --border-color: var(--border-color-light);
    --svg-filter: var(--svg-filter-light)
}

html, body {
    overflow: hidden;
    margin: 0;
}

body {
    background-color: var(--background-color);
    color: var(--main-color);

    /* For page transition effect */
    transition: var(--opacity-transition);
}

html {
    line-height: 1;
}

h1, a, strong, span, .text, .box {
    color: var(--text-color);
    text-decoration: none;
}

ul > li::marker {
    content: "";
}

.socialnav span {
    margin-right: 15px;
    font-size: 10px;
}

main {
    display: grid;
}

/* .container spans the whole page, basically a replacement for main. */

.container {
    display: grid;
    grid-template-columns: 0.1fr 0.5fr 0.5fr 0.5fr 0.1fr;
    grid-template-rows: 0.07fr 0.1fr 0.1fr 1fr 0.3fr 0.07fr;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
    background-color: var(--background-color);
    height: 100vh;
    width: 100vw;

    opacity: 0;

    transition: background-color 1s ease-in-out, var(--opacity-transition);
}

/* .content contains everything within the border you see on the page. */
    
.content { 
    position: relative;
    grid-area: 2 / 2 / 6 / 5; 
    padding: 1em;
    border: 1px solid var(--border-color);
    background-color: var(--background-color);

    display: flex;
    flex-direction: column;
    justify-content: space-between;
    z-index: 1;

    transition: background-color 1s ease-in-out;
}

/* Theme toggling buttons CSS */

.themes {
    position: absolute;
    display: flex;
    column-gap: 15px;

    align-items: center;
    justify-content: center;
    color: white;
    cursor: pointer;

    top: -1.5rem;
    right: 0;
}

.theme_button {
    display: flex;
    flex-direction: row;
    column-gap: 3px;
}

.theme_button .box::before {
    content: "□";
}

.theme_button.is-selected .box::before {
    content: "■";
}

.theme_button > .text {
    font-family: 'Linik Sans ExtraLight', monospace;
}

/* Radial background CSS */
.background {
    position: absolute;
    width: 100%;
    height: 100%;
    margin: -1rem;

    z-index: -1;

    transition: var(--opacity-transition), background 1s ease-in-out;

    overflow: hidden;
}

.background.background-dark {
    background: radial-gradient(circle at var(--sun-x, 50%) var(--sun-y, 50%), var(--sun-background-dark), var(--background-color) 50%);
    transition: inherit;
}

.background.background-light {
    background: radial-gradient(circle at var(--sun-x, 50%) var(--sun-y, 50%), var(--sun-background-light), var(--background-color) 50%);
    transition: inherit;
}

/* Moving sun CSS */
.sun-container {
    position: relative;
    width: 100%;
    height: 100%;
    transition: var(--opacity-transition);
}

.sun-container > img {
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: -2;
    height: 75px;
    width: 75px;
    border-radius: 50%;
    
    /* Remove the keyframe animation */
    transform-origin: center;
    
    /* Make it not draggable */
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

.sun-container.sun-filter-dark {
    filter: var(--sun-filter-dark);
    -webkit-filter: var(--sun-filter-dark);
}

.sun-container.sun-filter-light {
    filter: var(--sun-filter-light);
    -webkit-filter: var(--sun-filter-light);
}

/* Site header CSS */

.siteHeader {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 200;
    font-style: normal;

    display: flex;
    flex-direction: column;

    margin-bottom: -10px;
    margin-top: 0;

    width: max-content;
}

@media only screen and (max-width: 800px) and (max-height: 800px) {
    .siteHeader h1 {
        font-size: 25px;
    }
}

@media only screen and (min-width: 800px) and (max-height: 800px) {
    .siteHeader h1 {
        font-size: 35px;
    }
}

@media only screen and (min-width: 1400px) and (max-height: 800px) {
    .siteHeader h1 {
        font-size: 50px;
    }
}

@media only screen and (min-height: 800px) {
    .siteHeader h1 {
        font-size: 35px;
    }
}

@media only screen and (min-height: 1600px) {
    .siteHeader h1 {
        font-size: 65px;
    }
}

.nameHeader {
    display: inline;
    margin: 0;

    font-weight: inherit;
}

/* Navbar present on every page CSS */

.navbar {
    padding: 0;
    margin-top: 1em;

    width: auto;
    font-weight: inherit;
}

.navbar > ul {
    padding-left: 2px;
    margin-top: 0;
    display: flex;
    justify-content: space-between;

    cursor: pointer;
    gap: 10px;
}

.navbar > ul > li:hover {
    opacity: .25;
    transition: .25s
}

/* Social links at the bottom left of home page CSS */

.socialnav {
    grid-area: 5 / 4 / 6 / 5;
    display: flex;
    position: relative;
    width: 30%;
    justify-content: flex-end;
    left: 70%;
}

.socialnav ul {
    margin-top: 0px;
    margin-bottom: 0px;
}

.socialnav li:hover a {
    transform: rotateY(15deg) translateZ(0);
    transform-origin: left center;
    transition: all .25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

.sociallink {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.sociallink strong {
    margin-bottom: 5px;
    margin-top: 5px;
}

.sociallink span {
    width: 15px;
    margin-right: 7px;
}

/* Projects page CSS */
.projects-div {
    display: flex;
    flex-direction: column-reverse;
    margin: -1rem;
    overflow: hidden scroll;

    scrollbar-width: none;
}

.project {
    position: relative;
    color: var(--text-color);
    margin: 1.5rem 0;
    border-top: 1px solid transparent;
    border-bottom: 1px solid transparent;
    z-index: 0;
    transition: border-top-color 0.5s ease, 
                border-bottom-color 0.5s ease, 
                background-color 0.5s ease;
    text-decoration: none; /* Remove default link underline */
    display: block flex; /* Make link full width */

    cursor: pointer;
}

.project:hover {
    border-top-color: var(--border-color);
    border-bottom-color: var(--border-color);
    /* background-color: var(--background-color); */
}

.project > p {
    font-weight: bold;
    position: relative;
    margin: 1.5rem 0;
    z-index: 2;
}

.project-preview {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    max-width: 300px;
    opacity: 0;
    visibility: hidden;
    transition: opacity 0.3s ease, visibility 0.3s ease;
    border-radius: 4px;
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
    object-fit: cover;
    z-index: 1;
}

.project:hover .project-preview {
    opacity: 0.5;
    visibility: visible;
}

/* Individual project pages CSS */
.individual-project-div {
    height: 90%;
    padding-top: 10%;
    display: flex;
    flex-direction: column;
    justify-content: space-around;

    overflow: scroll;
    scrollbar-width: none;
}

.collapsible {
    cursor: pointer;
    width: fit-content;
}

.collapsible ~ .collapsible-content {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
    max-width: 40%;
}

img#collapsible-chevron {
    height: 12px;
    width: 12px;
    filter: var(--svg-filter);
}

/* General font settings */

.sociallink, .info-p, .blog, .form, .projects-div, h2, p {
    font-family: "Inter", sans-serif;
    font-weight: 500;
    color: var(--text-color);
}

/* Info page CSS */

.info-div {
    display: flex;

    justify-content: center;
    align-items: center;

    width: 40%;
    margin: auto auto;
}

.info-p {
    color: var(--text-color);
}

/* General forms CSS */

.form-div {
    margin: auto 0;
    height: 100%;
}

.form-div, .posts-div {
    overflow: scroll;
}

/* Hide scrollbar for chromium based browsers and the rest respectively*/

.form-div::-webkit-scrollbar, .posts-div::-webkit-scrollbar {
    display: none;
}

.form-div, .posts-div {
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.form {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    flex-direction: column;

    margin: auto 0;

    color: var(--text-color);
}

.form label {
    margin: -0.3rem 0;
}

.form textarea {
    margin: 0.7rem 0;
    background-color: var(--background-color);
    border: 1px solid var(--border-color);
    border-radius: 4px;
    resize: none;
    color: var(--text-color);
    height: 1rem;
    width: 20rem;

    text-shadow: var(--main-color) 2px 0px 8px;

    transition: background-color 1s ease-in-out, text-shadow 1s ease-in-out; /* Text-shadow transition werkt niet goed mee :( */
}

.form textarea:focus {
    outline: none;
}

@media only screen and (max-width: 400px) {
    .form textarea {
        width: 12rem;
    }
}

.form input { /* Submit button */
    background-color: var(--background-color);
    border: 1px solid var(--border-color);
    border-radius: 4px;

    color: inherit;
    transition: background-color 1s ease-in-out;
}

.form textarea#title {
    height: 2rem;
}

.form textarea#messageContent {
    height: 8rem;
}


/* Blog page CSS */

.blog {
    overflow: hidden;
    height: 100%;
    width: 100%;

    display: flex;
}

.posts-div {
    height: 120%;

    display: flex;
    flex-direction: column;

    align-items: flex-end;

}

@media (orientation: landscape) {
    .blog {
        flex-direction: row;
    }
    
    .posts-div {
        width: 50%;
    }

    #blog-form-div {
        width: 50%;
    }
}

@media (orientation: portrait) {
    .blog {
        flex-direction: column;
    }

    .posts-div {
        width: 100%;
    }

    #blog-form-div {
        width: 100%;
    }
}

.blog-post, .comment-div {
    position: relative;

    color: var(--text-color);
    background-color: var(--background-color);

    margin: 3px 0;
    padding: 3px 10px 5px 15px;

    border: 1px solid var(--border-color);
    border-radius: 4px;

    text-align: right;

    width: fit-content;

    display: flex;
    flex-direction: column;

    transition: background-color 1s ease-in-out;
}

.blog-post > h4, .blog-post > p {
    margin: 5px 0;
    word-wrap: anywhere;
}

.blog-post > sub {
    margin: 3px 0 8px 0;
}

.blog-controls {
    margin: 0.5rem 0;

    display: flex;

    flex-direction: row;
    gap: 10px;
}

.blog-control-svg {
    width: 10px;
    height: 10px;

    filter: var(--svg-filter);
}

#delete-svg {
    position: relative;
    bottom: -1px;
}

#comment-svg {
    width: 11px;
    height: 11px;
}

.comments-div {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    margin-top: -0.5%;
    margin-bottom: 2%;
}

.comment-div {
    margin: 0;
}

.comment-div > sub {
    margin: 5px 0;
}

